[project]
name = "my_project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "furo>=2025.7.19",
  "myst-parser>=4.0.1",
  "pytest>=8.0",
  "sphinx>=8.2.3",
  "sphinx-notfound-page>=1.1.0",
]
